--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>2.7.2</version>
+        </dependency>
     </dependencies>
 
     <build>
