--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/shoe
-spring.datasource.username=admin
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# MySQL database connection properties
+spring.datasource.url=jdbc:mysql://localhost:3306/shoes
+spring.datasource.username=root
+spring.datasource.password=021220
+
+# JPA properties
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
