--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # MySQL database connection properties
 spring.datasource.url=jdbc:mysql://localhost:3306/shoes
 spring.datasource.username=root
-spring.datasource.password=021220
+spring.datasource.password=
 
 # JPA properties
 spring.jpa.show-sql=true
