--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -8,10 +8,9 @@
         <version>3.0.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example</groupId>
+    <groupId>vn.edu.hcmuaf.fit</groupId>
     <artifactId>ShoeBackEnd</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
     <name>ShoeBackEnd</name>
     <description>ShoeBackEnd</description>
     <properties>
@@ -39,18 +38,13 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-tomcat</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-crypto</artifactId>
-            <version>5.6.1</version>
+            <version>6.0.2</version>
         </dependency>
     </dependencies>
 
